Fixed z-index issues with header

--- a/css/jack-jones.css
+++ b/css/jack-jones.css
@@ -565,6 +565,7 @@ input[type="password"] {
 #branded .header {
   width: 100%  !important;
   left: 0;
+  z-index: 11;
 }
 
 #branded .header .simple_search input {
